--- a/climate.qmd
+++ b/climate.qmd
@@ -4,21 +4,23 @@
 
 -   Example from <http://climate.nasa.gov/vital-signs/carbon-dioxide/>
 -   Raw data from <https://gml.noaa.gov/webdata/ccgg/trends/co2/co2_mm_mlo.txt>
+
 ```{r}
 library(ggplot2)
 library(dplyr)
+library(lubridate)
+library(tidyverse)
 
 ```
 
-``` {r}
+```{r}
 #read in data
 columns = c('year', 'month', 'decimal_date', 'average', 'smooth', 'std_days', 'uncertainty', 'empty')
 df = read.table("https://gml.noaa.gov/webdata/ccgg/trends/co2/co2_mm_mlo.txt", col.names =  columns)
 df
 ```
 
-
-``` {r}
+```{r}
 #plot the data
 ggplot(df, aes(decimal_date, average)) +
   geom_line(color = "blue") +
@@ -28,33 +30,34 @@ ggplot(df, aes(decimal_date, average)) +
 
 ```
 
-``` {r}
-co2 = con.create_table("co2", df)
-co2_tidy = (co2
-.select ("decimal_date", _.average)
-.head(10)
-.execute()
-)
+```{r}
+#averaging all the months
+
+co2_tidy <- df %>%
+  group_by(month) %>%
+  summarize(average = mean(average, na.rm = TRUE)) 
+co2_tidy
+
 ```
 
-``` {r}
-(
-so.Plot(co2_tidy, x = "decimal_date", y ="average")
-.add(so.Dots())
-)
-```
+```{r}
+# plot the averages on an average year
 
-![png](climate_files/climate_5_0.png)
+ggplot(co2_tidy, aes(month, average)) +
+  geom_line(color = "steelblue") +
+  labs(title = "Annual Average CO2",
+       x = "Months",
+       y = "CO2 (ppm)") +
+  theme_minimal()
+```
 
 Which months are the CO2 values at the maximum? Minimum? Why is this?
 
-What rolling average is used in computing the "trend" line? How does the trend depend on the rolling average?
+-   Max is at April (early spring) and Min is near September (Fall) Maybe this is due to the fact that most vegetation is more active during summer, taking away lots of CO2 from atmosphere.
 
 ------------------------------------------------------------------------
 
-:::{tip} Exercise 1
-
-# Temperature Data
+# Exercise I: Temperature Data
 
 Each of the last years has consecutively set new records on global climate. In this section we will analyze global mean temperature data.
 
@@ -65,41 +68,56 @@ Data from: <http://climate.nasa.gov/vital-signs/global-temperature>
 Describe the data set to the best of your ability given the documentation provided. Describe what kind of column each data contains and what units it is measured in. Then address our three key questions in understanding this data:
 
 -   How are the measurements made? What is the associated measurement uncertainty?
+
 -   What is the resolution of the data?
+
 -   Are their missing values? How should they be handled?
 
+```{r}
+#The data is collected is global surface temperature compared to a long term average from 1951-1980
 
+#Columns are 'Year' data was collected (discrete data), temp in C with 'No_smoothing', and a temp in C that is smoothed using 'Lowess' method
 
-``` {r}
+    # Measurements made a from GISS which seems to be using satellites and space probes
+    # Data is collected to the hundredth of a C degree
+    # to find missing values we need to ask with the code "sum(is.na(ice))", which we should then throw out any missing values
+```
+
+## Question 2:
+
+Construct the necessary r code to import and prepare for manipulation the following data set: <http://climate.nasa.gov/system/internal_resources/details/original/647_Global_Temperature_Data_File.txt>
+
+```{r}
+#read in data
 columns = c('Year', 'No_smoothing', 'Lowess')
 df = read.table("https://data.giss.nasa.gov/gistemp/graphs/graph_data/Global_Mean_Estimates_based_on_Land_and_Ocean_Data/graph.txt", skip=5, col.names = columns)
 df
 ```
 
-``` {r}
-# Check for missing values
-
-```
-
-``` {r}
-ggplot(df, aes(Year))+
-  geom_line()
-```
-
-![png](climate_files/climate_10_0.png)
-
-## Question 2:
-
-Construct the necessary python code to import and prepare for manipulation the following data set: <http://climate.nasa.gov/system/internal_resources/details/original/647_Global_Temperature_Data_File.txt>
-
-``` python
+```{r}
+#checking for missing values
+sum(is.na(df))
+#and there is none so we don't need to worry about not including them in the data
 ```
 
 ## Question 3:
 
 Plot the trend in global mean temperatures over time. Describe what you see in the plot and how you interpret the patterns you observe.
 
-``` python
+```{r}
+#plotting the data
+
+ggplot(df, aes(x = Year)) +
+  geom_line(aes(y = No_smoothing, color = "No smoothing", linetype = "No smoothing")) +
+  geom_line(aes(y = Lowess, color = "Lowess", linetype = "Lowess")) +
+  labs(title = "Global Mean Temperature Anomaly",
+       x = "Year",
+       y = "Temperature Anomaly (°C)",
+       color = "Line Type",
+       linetype = "Line Type") +
+  scale_color_manual(values = c("No smoothing" = "steelblue", "Lowess" = "darkred")) +
+  scale_linetype_manual(values = c("No smoothing" = "dashed", "Lowess" = "solid")) +
+  theme_minimal()
 ```
 
 # Exercise II: Melting Ice Sheets?
@@ -110,167 +128,79 @@ Plot the trend in global mean temperatures over time. Describe what you see in t
 ## Question 1:
 
 -   Describe the data set: what are the columns and units? Where do the numbers come from?
--   What is the uncertainty in measurment? Resolution of the data? Interpretation of missing values?
+-   What is the uncertainty in measurement? Resolution of the data? Interpretation of missing values?
 
-``` python
-columns = ['year', 'No_Smoothing', 'Lowess(5)',]
-global_temp = pd.read_csv("https://data.giss.nasa.gov/gistemp/graphs/graph_data/Global_Mean_Estimates_based_on_Land_and_Ocean_Data/graph.txt", 
-sep="\s+", #this tells code to interpret multiple spaces as a comma like a csv file
-names= columns, #this tells code to use the column names we defined above
-skiprows=5 #this tells code to skip the first 5 rows of the file
-)
-global_temp
+```{r}
+
+#    - There are three columns. First is year in decimal notation, second is the mass of ice in Greenland, and third is the mass of ice in Antarctica. Data is collected from NASA's GRACE satellites
+#    - The units are gigatonnes. The data is from the GRACE satellite mission. The uncertainty is 10 gigatonnes (this information was filled in by AI and I cannot find the verification of it). 
+#    - The resolution is two decimal places. No missing values, but I can find them using is.na()
+
 ```
-
-<div>
-
-```{=html}
-<style scoped>
-    .dataframe tbody tr th:only-of-type {
-        vertical-align: middle;
-    }
-
-    .dataframe tbody tr th {
-        vertical-align: top;
-    }
-
-    .dataframe thead th {
-        text-align: right;
-    }
-</style>
-```
-|      | year | No_Smoothing | Lowess(5) |
-|------|------|--------------|-----------|
-| 0    | 1880 | -0.17        | -0.10     |
-| 1    | 1881 | -0.09        | -0.13     |
-| 2    | 1882 | -0.11        | -0.17     |
-| 3    | 1883 | -0.17        | -0.20     |
-| 4    | 1884 | -0.28        | -0.24     |
-| \... | \... | \...         | \...      |
-| 140  | 2020 | 1.01         | 0.97      |
-| 141  | 2021 | 0.84         | 1.03      |
-| 142  | 2022 | 0.89         | 1.08      |
-| 143  | 2023 | 1.17         | 1.14      |
-| 144  | 2024 | 1.28         | 1.20      |
-
-<p>145 rows × 3 columns</p>
-
-</div>
-
-``` python
-#checking for missing values in file
-print(global_temp.isnull().sum())
-```
-
-    year            0
-    No_Smoothing    0
-    Lowess(5)       0
-    dtype: int64
-
-## Question 3:
-
-Plot the trend in global mean temperatures over time. Describe what you see in the plot and how you interpret the patterns you observe.
-
-``` python
-import pandas as pd
-import ibis
-from ibis import _
-import seaborn.objects as so
-(
-so.Plot(global_temp, x = "year", y = "No_Smoothing").add(so.Dots())
-)
-```
-
-![png](climate_files/climate_19_0.png)
-
-``` python
-# Add another line
-(so.Plot(global_temp, x = "year", y = "Lowess(5)").add(so.Lines())
-)
-```
-
-![png](climate_files/climate_20_0.png)
-
-# Exercise II: Melting Ice Sheets?
-
--   Data description: <http://climate.nasa.gov/vital-signs/land-ice/>
--   Raw data file: <http://climate.nasa.gov/system/internal_resources/details/original/499_GRN_ANT_mass_changes.csv>
-
-## Question 1:
-
--   Describe the data set: what are the columns and units? Where do the numbers come from?
--   What is the uncertainty in measurment? Resolution of the data? Interpretation of missing values?
-
-``` python
-# Answer to question 1:
-    # There are three columns. First is year in decimal notation, second is the mass of ice in Greenland, and third is the mass of ice in Antarctica. 
-    # The units are gigatonnes. The data is from the GRACE satellite mission. The uncertainty is 10 gigatonnes (this information was filled in by AI and I cannot find the verification of it). 
-    # The resolution is two decimal places. Missing values are represented as -999999.
-ice_url = "http://climate.nasa.gov/system/internal_resources/details/original/499_GRN_ANT_mass_changes.csv"
-df = pd.read_csv (ice_url, skiprows=10, names = ["date", "greenland", "antarctica"])
-ice = (con
-        .create_table("ice", df, overwrite=True)
-        .pivot_longer(["greenland", "antarctica"],
-        names_to="location",
-        values_to="ice mass")
-)
-ice.execute()
-```
-
-<div>
-
-```{=html}
-<style scoped>
-    .dataframe tbody tr th:only-of-type {
-        vertical-align: middle;
-    }
-
-    .dataframe tbody tr th {
-        vertical-align: top;
-    }
-
-    .dataframe thead th {
-        text-align: right;
-    }
-</style>
-```
-|      | date    | location   | ice mass |
-|------|---------|------------|----------|
-| 0    | 2002.29 | greenland  | 1490.68  |
-| 1    | 2002.29 | antarctica | 967.20   |
-| 2    | 2002.35 | greenland  | 1485.69  |
-| 3    | 2002.35 | antarctica | 978.55   |
-| 4    | 2002.62 | greenland  | 1286.84  |
-| \... | \...    | \...       | \...     |
-| 275  | 2014.71 | antarctica | -780.87  |
-| 276  | 2014.79 | greenland  | -1973.96 |
-| 277  | 2014.79 | antarctica | -904.38  |
-| 278  | 2014.88 | greenland  | -1911.78 |
-| 279  | 2014.88 | antarctica | -1009.80 |
-
-<p>280 rows × 3 columns</p>
-
-</div>
-
-``` python
-so.Plot(ice, x="date", y="ice mass", color = "location").add(so.Lines())
-```
-
-![png](climate_files/climate_23_0.png)
 
 ## Question 2:
 
 Construct the necessary code to import this data set.
 
-``` python
-#See above 
+```{r}
+columns = c('decimal_date', 'greenland_mass', 'antarctica_mass')
+ice = read.csv("http://climate.nasa.gov/system/internal_resources/details/original/499_GRN_ANT_mass_changes.csv", col.names= columns, skip=9)
+ice
+
+```
+
+```{r}
+#checking for missing values in file
+sum(is.na(ice))
+
 ```
 
 ## Question 3:
 
 Plot the data and describe the trends you observe.
 
-``` python
+```{r}
+#plotting data
+ggplot(ice, aes(x = decimal_date)) +
+  geom_line(aes(y = greenland_mass, color = "Greenland", linetype = "Greenland")) +
+  geom_line(aes(y = antarctica_mass, color = "Antarctica", linetype = "Antarctica")) +
+  labs(title = "Ice masses over time",
+       x = "Year",
+       y = "Mass of Ice (Gt)",
+       color = "Location",
+       linetype = "Location") +
+  scale_color_manual(values = c("Greenland" = "darkgreen", "Antarctica" = "darkblue")) +
+  scale_linetype_manual(values = c("Greenland" = "solid", "Antarctica" = "solid")) +
+  theme_minimal()
+```
+```{r}
+#if i wanted to split graph into two panels
+
+#mutate data 
+
+ice_long <- ice %>%
+  pivot_longer(cols = c(greenland_mass, antarctica_mass),
+               names_to = "location",
+               values_to = "mass") %>%
+  mutate(location = recode(location,
+                           greenland_mass = "Greenland",
+                           antarctica_mass = "Antarctica"))
+
+ggplot(ice_long, aes(x = decimal_date, y = mass, color = location)) +
+  geom_line() +
+  facet_wrap(~ location, nrow = 1) +  # Side-by-side panels
+  scale_color_manual(values = c("Greenland" = "darkgreen", "Antarctica" = "darkblue")) +
+  labs(title = "Ice Masses Over Time",
+       x = "Year",
+       y = "Mass of Ice (Gt)",
+       color = "Location") +
+  theme_minimal()
+
+#this honestly feels like too much work, but valuable to have this plotting method in my repertoire
+```
+
+```{r}
+#NOW I WANT TO MAKE A MAP OF ICE CAPS
 ```
 
 # Exercise III: Rising Sea Levels?
@@ -284,22 +214,43 @@ Plot the data and describe the trends you observe.
 -   Where do these data come from?
 -   What is the uncertainty in measurment? Resolution of the data? Interpretation of missing values?
 
-``` python
+```{r}
+# Data is quantifying global sea level rise. There are twelve columns. The column names are listed in the headers. Of all the columns, the ones we will likely focus on are Year (given in continuous decimal date), and the last column which is smoothed GMSL GIA applied variation in mm with annual and semi-annual signal removed
+
+#data comes from Global Mean sea level which is computed at NASa Goddard Space Flight Center which combines Sea Surface Heights from TOPEX/Poseidon, Jason-1 and OSTM/Jason-2
+
+#data is collected in mm, with very little uncertainty. Missing values are listed by 99900.00
 ```
+
 
 ## Question 2:
 
 Construct the necessary R code to import this data set as a tidy `Table` object.
+```{r}
+#read in data
+columns = c('type', 'file', 'decimal_date', 'observations', 'weighted_observations', 'GMSL_TOPEX', 'std_GMSL_TOPEX', 'unknown', 'GMSL_TOPEX_GIA' , 'std_GMSL_TOPEX_GIA' ,'smoothed_GMSL', 'smoothed_GMSL_nosignal')
+df = read.table("http://climate.nasa.gov/system/internal_resources/details/original/121_Global_Sea_Level_Data_File.txt", col.names = columns, skip = 47)
+df <- df[df$type != 999, ]
+df
 
-``` python
 ```
+
 
 ## Question 3:
 
 Plot the data and describe the trends you observe.
 
-``` python
+```{r}
+ggplot(df, aes(x = decimal_date)) +
+  geom_ribbon(aes(ymin= smoothed_GMSL_nosignal - 4 + 14.09, ymax = smoothed_GMSL_nosignal +4 + 14.09), fill ="lightblue")  + #website says 4.0 mm is uncertainty level
+  geom_line(aes(y = smoothed_GMSL_nosignal + 14.09)) + #because this is since 1993 I need to subtract the original sea level (also done above)
+  labs(title = "Sea Level Rise",
+       x = "Year",
+       y = "Sea Height Variation (mm)") +
+  theme_minimal()
+
 ```
+
 
 # Exercise IV: Arctic Sea Ice?
 
@@ -329,40 +280,7 @@ arctic_ice = con.read_csv(url).execute()
 arctic_ice
 ```
 
-<div>
 
-```{=html}
-<style scoped>
-    .dataframe tbody tr th:only-of-type {
-        vertical-align: middle;
-    }
-
-    .dataframe tbody tr th {
-        vertical-align: top;
-    }
-
-    .dataframe thead th {
-        text-align: right;
-    }
-</style>
-```
-|      | year | mo   | data-type | region | extent | area  |
-|------|------|------|-----------|--------|--------|-------|
-| 0    | 1979 | 1    | Goddard   | N      | 15.41  | 12.41 |
-| 1    | 1980 | 1    | Goddard   | N      | 14.86  | 11.94 |
-| 2    | 1981 | 1    | Goddard   | N      | 14.91  | 11.91 |
-| 3    | 1982 | 1    | Goddard   | N      | 15.18  | 12.19 |
-| 4    | 1983 | 1    | Goddard   | N      | 14.94  | 12.01 |
-| \... | \... | \... | \...      | \...   | \...   | \...  |
-| 88   | 2020 | 2    | Goddard   | N      | 14.64  | 12.95 |
-| 89   | 2021 | 2    | Goddard   | N      | 14.39  | 12.76 |
-| 90   | 2022 | 2    | Goddard   | N      | 14.61  | 12.90 |
-| 91   | 2023 | 2    | NRTSI-G   | N      | 14.18  | 12.57 |
-| 92   | 2024 | 2    | NRTSI-G   | N      | 14.61  | 12.73 |
-
-<p>93 rows × 6 columns</p>
-
-</div>
 
 ``` python
 arctic_ice = arctic_ice[~(arctic_ice == -9999).any(axis=1)]
